--- a/css/garbage.css
+++ b/css/garbage.css
@@ -100,9 +100,9 @@
     color: #fff;
 }
 .select-calendar{
-    background:#a2cce3;
+    background: #fe9933;
     border-radius:0 !important;
-    color:#fff;
+    color:#fff !important;
     border:1px solid #fff;
 }
 
